--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "test aplication that expose CRUD operations for sale order item",
   "main": "src/index.ts",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "npx tsc",
+    "start:docker": "docker-compose up",
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon",
     "test": "jest",
@@ -19,16 +21,25 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
+    "sequelize-cli": "^6.6.0",
+    "sequelize-typescript": "^2.1.5",
     "sqlite3": "^5.1.4",
+    "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/joi": "^17.2.3",
     "@types/node": "^18.14.2",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/validator": "^13.7.12",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
