--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('src/database/config', 'database.config.ts'),
+  'config': path.resolve('src/database/config', 'database.config.js'),
   'models-path': path.resolve('src/database', 'models'),
   'seeders-path': path.resolve('src/database', 'seeders'),
   'migrations-path': path.resolve('src/database', 'migrations')
